--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.9)
-project(nn3
+project(toyNeuralNetwork
         VERSION 1.0
-        DESCRIPTION "Multilayer Neural Network"
+        DESCRIPTION "Multilayer Neural Network toy"
         LANGUAGES CXX)  
 
 set(CMAKE_VERBOSE_MAKEFILE ON)
